...
                .padding(16.dp)
                .verticalScroll(rememberScrollState()),
        ) {
            OutlinedTextField(
                value = usuario,
                onValueChange = { usuario = it },
                label = { Text("Nome de usuário") },
                singleLine = true,
                modifier = Modifier.fillMaxWidth(),
            )

            Button(
                onClick = {
...
                    } else {
                        aoEntrar(nome)
                    }
                },
                modifier = Modifier.padding(top = 16.dp),
            ) {
                Text("Entrar")
            }

        }
    }
}

